<resources>
    <string name="app_name">CoVid.Et</string>

    <string name="statistics_menu_title">Stats</string>
    <string name="covid19_menu_title">Covid19</string>
    <string name="news_menu_title">News</string>
    <string name="contact_menu_title">Contact</string>
    <string name="read_more">Read More</string>
    <string name="stable">Stable</string>
    <string name="infected">Infected</string>
    <string name="status_for">Status for</string>
    <string name="death">Death</string>
    <string name="recovered">Recover</string>
    <string name="tested">Tested</string>
    <string name="regions_affected">Regions affected</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="error_content">Some error has occurred while preparing content</string>
    <string name="refresh">Refresh</string>
    <string name="check_in">Check in everyday about how you are feeling.</string>
    <string name="help_us_identify_unwell">Help us identify areas with people feeling unwell</string>
    <string name="donate_data">Donate your data to help scientists identify the problem</string>
    <string name="result">Result</string>
    <string name="questionnaire_text">Take a questionnaire now to notify us about your state. This will help us greatly</string>
    <string name="start">Start</string>
    <string name="send">Send</string>
    <string name="help_nhs">Above all, stay home to help the NHS workers and keep them safe</string>
    <string name="exit_text">Press back again or 👉🏾 button</string>
    <string name="exit">Exit</string>
    <string name="et_covid_dist">Ethiopia Covid19 Distribution</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovery">Recovery</string>
    <string name="ethiopia">Ethiopia</string>

    <string name="country">Country</string>
    <string name="active">Active</string>
    <string name="critical">Critical</string>
    <string name="case_per_mil">Case/1M</string>
    <string name="death_per_mil">Death/1M</string>

    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="location">location</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="recent_travel">RecentTravel</string>
    <string name="status">Status</string>

    <string name="exit_questionnaire">Exit questionnaire?</string>
    <string name="exit_questionnaire_message">If you exit now, all the progress will be lost. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addis_abeba">Addis Abeba,</string>
    <string name="language">Language</string>
    <string name="amh" translatable="false">አማርኛ</string>
    <string name="eng" translatable="false">English</string>
    <string name="or" translatable="false">Affan Oromo</string>
    <string name="tig" translatable="false">ትግርኛ</string>
    <string name="next_page">Next Page</string>
    <string name="comeback_tmw" translatable="false">You have filled in the questionnaire for today. Please comeback tommorrow.</string>
    <string name="regional_phone_numbers">Regional Phone Numbers</string>

</resources>
